# ulov-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.monitoring.yml  ecosystem.config.js  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260424_1200_0001_initial_auth.py  20260424_1300_0002_customer_core.py  20260425_1000_0003_phase3_erp.py  20260425_1400_0004_phase5_secondary.py  20260425_1456_e52e9a810976_add_insurance_companies_v2.py  20260425_1525_7aa22029ef2f_add_stories_table.py  20260425_1600_0005_phase6_billing.py  20260426_0900_0006_phase9_audit.py  20260502_0900_0007_center_gallery.py
app/: __init__.py  config.py  deps.py  main.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/api/: __init__.py  v1.py
app/core/: __init__.py  errors.py  events.py  logging.py  pagination.py  phone.py  plate.py  rate_limit.py  rbac.py  security.py
app/db/: __init__.py  base.py  session.py
app/integrations/: __init__.py  click.py  eskiz.py  fcm.py  payme.py
app/modules/: __init__.py
app/modules/admin/: __init__.py  router.py
app/modules/audit/: __init__.py  models.py  router.py  service.py
app/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/billing/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/cars/: __init__.py  models.py  recommendations.py  repository.py  router.py  schemas.py  service.py
app/modules/content/: __init__.py  models.py  repository.py  router.py  schemas.py  seed_data.py  service.py  stories_models.py
app/modules/fuel_stations/: __init__.py  models.py  router.py
app/modules/insurance/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/mechanics/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/notifications/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/reference/: router.py
app/modules/reviews/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/service_centers/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/services/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  state_machine.py
app/modules/sos/: __init__.py  models.py  router.py  schemas.py
app/modules/stats/: __init__.py  router.py  service.py
app/modules/trips/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/uploads/: __init__.py  client.py  router.py  schemas.py  service.py
app/modules/users/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/workers/: __init__.py  arq_worker.py
app/workers/tasks/: __init__.py
monitoring/: README.md  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: ulov-api.json
monitoring/rules/: api-alerts.yml
nginx/: grafana.misterdev.uz.conf  ulov-api.misterdev.uz.conf
scripts/: dump_openapi.py  import_cms_content.py  import_erp_json.py  import_user_json.py  seed.py  seed_bulk.py  seed_content.py  seed_demo_data.py  seed_fake_data.py  seed_insurance.py  seed_rich_data.py
scripts/data/: data.json  ulov-erp.json
tests/: conftest.py  test_config.py  test_health.py  test_phone.py  test_plate.py  test_recommendations.py  test_security.py
tests/integrations/: conftest.py  test_click.py  test_eskiz.py  test_payme.py
tests/modules/: conftest.py
tests/modules/admin/: test_admin.py
tests/modules/audit/: test_audit.py
tests/modules/auth/: conftest.py  test_otp.py  test_password_reset.py  test_refresh.py  test_register_login.py
tests/modules/billing/: test_billing.py
tests/modules/cars/: test_cars.py
(+16 files in other folders)
